--- a/index.html
+++ b/index.html
@@ -395,71 +395,136 @@
             </td>
         </tr>
         <tr>
+            <td colspan="2">
+
+            </td>
           <td>
-            89- <br />
-            103
+            57 <br />
+            La
           </td>
           <td>
-            104 <br />
-            Rf
+            58 <br />
+            Ce
           </td>
           <td>
-            105 <br />
-            Db
+            59 <br />
+            Pr
           </td>
           <td>
-            106 <br />
-            Sg
+            60 <br />
+            Nd
           </td>
           <td>
-            107 <br />
-            Bh
+            61 <br />
+            Pm
           </td>
           <td>
-            108 <br />
-            Hs
+            62 <br />
+            Sm
           </td>
           <td>
-            109 <br />
-            Mt
+            63 <br />
+            Eu
           </td>
           <td>
-            110 <br />
-            Ds
+            64 <br />
+            Gd
           </td>
           <td>
-            111 <br />
-            Rg
+            65 <br />
+            Tb
           </td>
           <td>
-            112 <br />
-            Cn
+            66 <br />
+            Dy
           </td>
           <td>
-            113 <br />
-            Nh
+            67 <br />
+            Ho
           </td>
           <td>
-            114 <br />
-            Fl
+            68 <br />
+            Er
           </td>
           <td>
-            115 <br />
-            Mc
+            69 <br />
+            Tm
           </td>
           <td>
-            116 <br />
-            Lv
+            70 <br />
+            Yb
           </td>
           <td>
-            117 <br />
-            Ts
-          </td>
-          <td>
-            118 <br />
-            Og
+            71 <br />
+            Lu
           </td>
         </tr>
+
+        <tr>
+            <td colspan="2">
+
+            </td>
+            <td>
+              89 <br />
+              Ac
+            </td>
+            <td>
+              90 <br />
+              Th
+            </td>
+            <td>
+              91 <br />
+              Pa
+            </td>
+            <td>
+                92 <br />
+                U
+              </td>
+            <td>
+              93 <br />
+              Np
+            </td>
+            <td>
+              94 <br />
+              Pu
+            </td>
+            <td>
+              95 <br />
+              Am
+            </td>
+            <td>
+              96 <br />
+              Cm
+            </td>
+            <td>
+              97 <br />
+              Bk
+            </td>
+            <td>
+              98 <br />
+              Cf
+            </td>
+            <td>
+              99 <br />
+              Es
+            </td>
+            <td>
+              100 <br />
+              Fm
+            </td>
+            <td>
+              101 <br />
+              Md
+            </td>
+            <td>
+              102 <br />
+              No
+            </td>
+            <td>
+              103 <br />
+              Lr
+            </td>
+          </tr>
       </table>
     </div>
     <div></div>
